# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /
 definitions:
+  shortener.SearchRequest:
+    properties:
+      original_url:
+        type: string
+    type: object
   shortener.ShortenRequest:
     properties:
       original_url:
@@ -51,9 +56,9 @@ paths:
   /{url}:
     get:
       parameters:
-      - description: Short URL ID
+      - description: Short string ID
         in: path
-        name: shortID
+        name: url
         required: true
         type: string
       responses:
@@ -62,34 +67,12 @@ paths:
           schema:
             type: string
         "404":
-          description: URL not found
+          description: Short not found
           schema:
             additionalProperties:
               type: string
             type: object
       summary: Redirect to the original URL
-      tags:
-      - Shortener
-  /short/{url}:
-    get:
-      parameters:
-      - description: Short URL ID
-        in: path
-        name: shortID
-        required: true
-        type: string
-      responses:
-        "301":
-          description: Redirects to the original URL
-          schema:
-            type: string
-        "404":
-          description: URL not found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Gets a shortened URL by its short URL
       tags:
       - Shortener
   /shorten:
@@ -104,18 +87,18 @@ paths:
               $ref: '#/definitions/shortener.ShortenResponse'
             type: array
         "404":
-          description: No URLs found
+          description: No Shorts found
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get all URLs in the system
+      summary: Get all Shorts in the system
       tags:
       - Shortener
     post:
       consumes:
       - application/json
-      description: Shortens the given long URL. User must be logged in.
+      description: Creates a new Short for the given long URL.
       parameters:
       - description: Shorten URL request
         in: body
@@ -142,34 +125,34 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Shorten a URL for a logged-in user
+      summary: Shorten a URL
       tags:
       - Shortener
   /shorten/{id}:
     delete:
       parameters:
-      - description: Short URL ID
+      - description: Short numeric ID
         in: path
-        name: shortID
+        name: id
         required: true
         type: string
       responses:
         "204":
           description: No Content
         "404":
-          description: URL not found
+          description: Short not found
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Delete a URL by its short ID
+      summary: Delete a Short by its numeric ID
       tags:
       - Shortener
     get:
       parameters:
-      - description: Short URL ID
+      - description: Short numeric ID
         in: path
-        name: shortID
+        name: id
         required: true
         type: string
       produces:
@@ -180,26 +163,26 @@ paths:
           schema:
             $ref: '#/definitions/shortener.ShortenResponse'
         "404":
-          description: URL not found
+          description: Short not found
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get a URL by its Id
+      summary: Get a Short by its numeric ID
       tags:
       - Shortener
   /shorten/search:
     post:
       consumes:
       - application/json
-      description: Looks up a short URL by providing its original, long URL.
+      description: Looks up a Short by providing its original, long URL.
       parameters:
       - description: Original URL to look up
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/shortener.ShortenRequest'
+          $ref: '#/definitions/shortener.SearchRequest'
       produces:
       - application/json
       responses:
@@ -214,7 +197,7 @@ paths:
               type: string
             type: object
         "404":
-          description: URL not found
+          description: Short not found
           schema:
             additionalProperties:
               type: string
@@ -225,7 +208,31 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Get a shortened URL by its original URL
+      summary: Search for a Short by its original URL
+      tags:
+      - Shortener
+  /shorten/short/{url}:
+    get:
+      parameters:
+      - description: Short URL string
+        in: path
+        name: url
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/shortener.ShortenResponse'
+        "404":
+          description: Short not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Gets a Short by its short URL
       tags:
       - Shortener
   /shorten/user/{id}:
@@ -233,9 +240,9 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: userID
+        name: id
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -246,12 +253,12 @@ paths:
               $ref: '#/definitions/shortener.ShortenResponse'
             type: array
         "404":
-          description: No URLs found
+          description: No Shorts found
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: Get all URLs for a user
+      summary: Get all Shorts for a user
       tags:
       - Shortener
   /users:
