# internal/shortener/handlers.go
@@ -17,11 +17,11 @@ func NewURLHandler(service *URLService) *URLHandler {
 }
 
 // GetAll godoc
-// @Summary Get all URLs in the system
+// @Summary Get all Shorts in the system
 // @Tags Shortener
 // @Produce json
 // @Success 200 {array} ShortenResponse
-// @Failure 404 {object} map[string]string "No URLs found"
+// @Failure 404 {object} map[string]string "No Shorts found"
 // @Router /shorten [get]
 func (h *URLHandler) GetAll(c *fiber.Ctx) error {
 	shortModels, err := h.service.GetAllURLs()
@@ -43,8 +43,8 @@ func (h *URLHandler) GetAll(c *fiber.Ctx) error {
 }
 
 // Shorten godoc
-// @Summary Shorten a URL for a logged-in user
-// @Description Shortens the given long URL. User must be logged in.
+// @Summary Shorten a URL
+// @Description Creates a new Short for the given long URL.
 // @Tags Shortener
 // @Accept json
 // @Produce json
@@ -74,22 +74,22 @@ func (h *URLHandler) Shorten(c *fiber.Ctx) error {
 }
 
 // GetById godoc
-// @Summary Get a URL by its Id
+// @Summary Get a Short by its numeric ID
 // @Tags Shortener
 // @Produce json
-// @Param shortID path string true "Short URL ID"
+// @Param id path string true "Short numeric ID"
 // @Success 200 {object} ShortenResponse
-// @Failure 404 {object} map[string]string "URL not found"
+// @Failure 404 {object} map[string]string "Short not found"
 // @Router /shorten/{id} [get]
 func (h *URLHandler) GetById(c *fiber.Ctx) error {
 	paramId := c.Params("id")
 	id, err := strconv.ParseUint(paramId, 10, 64)
-	if err == nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err})
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
 	}
 	shortModel, err := h.service.GetById(uint(id))
 	if err != nil {
-		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err})
+		return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err.Error()})
 	}
 	shortenResponse := ShortenResponse{
 		Id:          shortModel.ID,
@@ -100,19 +100,20 @@ func (h *URLHandler) GetById(c *fiber.Ctx) error {
 }
 
 // GetByShortUrl godoc
-// @Summary Gets a shortened URL by its short URL
+// @Summary Gets a Short by its short URL
 // @Tags Shortener
-// @Param shortID path string true "Short URL ID"
-// @Success 301 {string} string "Redirects to the original URL"
-// @Failure 404 {object} map[string]string "URL not found"
-// @Router /short/{url} [get]
+// @Produce json
+// @Param url path string true "Short URL string"
+// @Success 200 {object} ShortenResponse
+// @Failure 404 {object} map[string]string "Short not found"
+// @Router /shorten/short/{url} [get]
 func (h *URLHandler) GetByShortUrl(c *fiber.Ctx) error {
 	shortUrl := c.Params("url")
 
 	shortModel, err := h.service.GetByShortUrl(shortUrl)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "URL not found"})
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "Short not found"})
 		}
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
@@ -126,30 +127,30 @@ func (h *URLHandler) GetByShortUrl(c *fiber.Ctx) error {
 	return c.JSON(shortenResponse)
 }
 
-// GetByOriginalUrl godoc
-// @Summary Get a shortened URL by its original URL
-// @Description Looks up a short URL by providing its original, long URL.
+// SearchByOriginalUrl godoc
+// @Summary Search for a Short by its original URL
+// @Description Looks up a Short by providing its original, long URL.
 // @Tags Shortener
 // @Accept json
 // @Produce json
-// @Param body body ShortenRequest true "Original URL to look up"
+// @Param body body SearchRequest true "Original URL to look up"
 // @Success 200 {object} ShortenResponse
 // @Failure 400 {object} map[string]string "Invalid request"
-// @Failure 404 {object} map[string]string "URL not found"
+// @Failure 404 {object} map[string]string "Short not found"
 // @Failure 500 {object} map[string]string "Internal server error"
 // @Router /shorten/search [post]
-func (h *URLHandler) GetByOriginalUrl(c *fiber.Ctx) error {
+func (h *URLHandler) Search(c *fiber.Ctx) error {
 	var req SearchRequest
 	if err := c.BodyParser(&req); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err})
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err.Error()})
 	}
 
-	shortModel, err := h.service.GetByLongUrl(req.OriginalUrl)
+	shortModel, err := h.service.Search(req)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err})
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "Short not found"})
 		}
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err})
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
 
 	responseObj := ShortenResponse{
@@ -164,9 +165,9 @@ func (h *URLHandler) GetByOriginalUrl(c *fiber.Ctx) error {
 // RedirectToOriginalUrl godoc
 // @Summary Redirect to the original URL
 // @Tags Shortener
-// @Param shortID path string true "Short URL ID"
+// @Param url path string true "Short string ID"
 // @Success 301 {string} string "Redirects to the original URL"
-// @Failure 404 {object} map[string]string "URL not found"
+// @Failure 404 {object} map[string]string "Short not found"
 // @Router /{url} [get]
 func (h *URLHandler) RedirectToOriginalUrl(c *fiber.Ctx) error {
 	short := c.Params("url")
@@ -174,7 +175,7 @@ func (h *URLHandler) RedirectToOriginalUrl(c *fiber.Ctx) error {
 	shortModel, err := h.service.GetByShortUrl(short)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
-			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "URL not found"})
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": "Short not found"})
 		}
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
 	}
@@ -183,12 +184,12 @@ func (h *URLHandler) RedirectToOriginalUrl(c *fiber.Ctx) error {
 }
 
 // GetAllByUser godoc
-// @Summary Get all URLs for a user
+// @Summary Get all Shorts for a user
 // @Tags Shortener
 // @Produce json
-// @Param userID path int true "User ID"
+// @Param id path string true "User ID"
 // @Success 200 {array} ShortenResponse
-// @Failure 404 {object} map[string]string "No URLs found"
+// @Failure 404 {object} map[string]string "No Shorts found"
 // @Router /shorten/user/{id} [get]
 func (h *URLHandler) GetAllByUser(c *fiber.Ctx) error {
 	userIDParam := c.Params("id")
@@ -216,11 +217,11 @@ func (h *URLHandler) GetAllByUser(c *fiber.Ctx) error {
 }
 
 // Delete godoc
-// @Summary Delete a URL by its short ID
+// @Summary Delete a Short by its numeric ID
 // @Tags Shortener
-// @Param shortID path string true "Short URL ID"
+// @Param id path string true "Short numeric ID"
 // @Success 204
-// @Failure 404 {object} map[string]string "URL not found"
+// @Failure 404 {object} map[string]string "Short not found"
 // @Router /shorten/{id} [delete]
 func (h *URLHandler) Delete(c *fiber.Ctx) error {
 	shortIDParam := c.Params("id")
@@ -228,7 +229,7 @@ func (h *URLHandler) Delete(c *fiber.Ctx) error {
 	id, err := strconv.ParseUint(shortIDParam, 10, 64)
 	if err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-			"error": err,
+			"error": err.Error(),
 		})
 	}
 
@@ -236,12 +237,12 @@ func (h *URLHandler) Delete(c *fiber.Ctx) error {
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{
-				"error": err,
+				"error": err.Error(),
 			})
 		}
 
 		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"error": err,
+			"error": err.Error(),
 		})
 	}
 
